Corrige links das redes sociais

--- a/index.html
+++ b/index.html
@@ -141,10 +141,8 @@
 								</div>
 								<div class="seperator">|</div>
 								<ul class="tophead-social">
-									<li><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a target="_blank" href="#"><i class="fa fa-google-plus"></i></a></li>
-									<li><a target="_blank" href="#"><i class="fa fa-linkedin"></i></a></li>
+									<li><a target="_blank" href="https://www.facebook.com/platos.itai"><i class="fa fa-facebook"></i></a></li>
+									<li><a target="_blank" href="https://twitter.com/platositai"><i class="fa fa-twitter"></i></a></li>
 								</ul>
 							</div>
 							<div class="clear"></div>
@@ -968,7 +966,11 @@ lsjQuery("#layerslider_6_1486260578_1").layerSlider({sliderVersion: '6.0.5', typ
 						<div class="col-sm-4 col-xs-12"><div id="gymedge_about-2" class="widget widget_gymedge_about"><h3 class="widgettitle">PL ATOS ITAÍ</h3>		<p>É o principal Centro de Treinamentos de artes marciais de Itai, hoje contamos com 4 modalidades e em breve novidades para todos atletas de Itaí. </p>
 		<div class="footer-social-media-area">
 			<ul>
-				<li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li><li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li><li><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li><li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li><li><a href="#" target="_blank"><i class="fa fa-pinterest"></i></a></li><li><a href="#" target="_blank"><i class="fa fa-rss"></i></a></li>			</ul>
+				<li>
+					<a href="https://www.facebook.com/platos.itai" target="_blank"><i class="fa fa-facebook"></i></a>
+				</li>
+				<li><a href="https://twitter.com/platositai" target="_blank"><i class="fa fa-twitter"></i></a></li>
+			</ul>
 		</div> 
 
 		</div></div><div class="col-sm-4 col-xs-12"><div id="do-etfw-2" class="widget widget-do-etfw">					<h3 class="widgettitle">Follow Us on Twitter</h3>		
