Ajusta link da area do aluno

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 									<div class="menu-top-header-container">
 										<ul id="menu-top-header" class="menu">
 											<li id="menu-item-1854" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1854">
-												<a href="#">Área do Aluno</a>
+												<a href="http://academia.vc/platositai" target="_blank">Área do Aluno</a>
 											</li>
 										</ul>
 									</div>						
