--- a/index.html
+++ b/index.html
@@ -998,7 +998,7 @@
                                 <script>
                                     (function ($) {
                                         $(document).ready(function () {
-                                            emailOwner = 'denis_tecnosoft@hotmail.com';
+                                            emailOwner = 'laugusto_oliveira@yahoo.com.br';
                                             $('#contact-form').on('submit', function (event) {
                                                 event.preventDefault();
 
