--- a/index.html
+++ b/index.html
@@ -111,6 +111,16 @@
 </head>
 
 <body class="page-template-default page page-id-2287 do-etfw wls_unknown wls_windows non-stick header-style-2 no-sidebar product-grid-view wpb-js-composer js-comp-ver-5.0.1 vc_responsive">
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-100563318-1', 'auto');
+    ga('send', 'pageview');
+  </script>
+  
   <div id="page" class="site">
     <a class="skip-link screen-reader-text" href="#content">Skip to content</a>
 
